# GoldMiner

./: .gitignore  CMakeLists.txt  bagel.h  bagel_cfg.h  debug_draw.cpp  debug_draw.h  gold_miner_ecs.cpp  gold_miner_ecs.h  main.cpp  sprite_manager.cpp  sprite_manager.h
lib/SDL/: CMakeLists.txt
lib/SDL/cmake/: macros.cmake  sdlchecks.cmake
lib/SDL/cmake/test/: CMakeLists.txt
lib/SDL/examples/: CMakeLists.txt
lib/SDL/src/haptic/hidapi/: SDL_hidapihaptic_c.h
lib/box2d/: CMakeLists.txt
lib/box2d/benchmark/: CMakeLists.txt
lib/box2d/docs/: CMakeLists.txt
lib/box2d/samples/: CMakeLists.txt
lib/box2d/shared/: CMakeLists.txt
lib/box2d/src/: CMakeLists.txt
lib/box2d/test/: CMakeLists.txt
